--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Manup, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HECA | 2024</title>
+    <title>DISTEX | 2024</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap"
@@ -58,7 +58,7 @@
                         <li><a href="./schedule.html">Agenda</a></li>
                         <li><a href="#">Exhibitor</a></li>
                         <li class="active"><a href="./about-us.html">About</a></li>
-                        <li><a href="./contact.html">Contacts</a></li>
+                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
                     </ul>
                 </nav>
                 <!-- <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a> -->
@@ -191,63 +191,39 @@
     </section>
     <!-- Story Section End -->
 
-    <!-- Newslatter Section Begin -->
-    <section class="newslatter-section about-newslatter">
-        <div class="container">
-            <div class="newslatter-inner set-bg" data-setbg="img/newslatter-bg.jpg">
-                <div class="ni-text">
-                    <h3>Subscribe Newsletter</h3>
-                    <p>Subscribe to our newsletter and don’t miss anything</p>
-                </div>
-                <form action="#" class="ni-form">
-                    <input type="text" placeholder="Your email">
-                    <button type="submit">Subscribe</button>
-                </form>
-            </div>
-        </div>
-    </section>
-    <!-- Newslatter Section End -->
-
-    <!-- Contact Section Begin -->
-    <section class="contact-section spad">
+    <section class="contact-from-section spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>Location</h2>
-                        <p>Get directions to our event center</p>
-                    </div>
-                    <div class="cs-text">
-                        <div class="ct-address">
-                            <span>Address:</span>
-                            <p>Bole Addis Ababa<br />Ethiopia</p>
-                        </div>
-                        <ul>
-                            <li>
-                                <span>Phone:</span>
-                                (+251)-945-67-8910
-                            </li>
-                            <li>
-                                <span>Email:</span>
-                                info@heca.com
-                            </li>
-                        </ul>
-                        <div class="ct-links">
-                            <span>Website:</span>
-                            <p>https://techethio.com</p>
-                        </div>
+                        <h2>Contact Us By Email!</h2>
+                        <p>Fill out the form below to recieve a free and confidential intial consultation.</p>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="cs-map"><iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.056267600396!2d38.76054691472543!3d9.022233093420393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b843e35a0669d%3A0x214d553e46c229b0!2sNational%20Museum%20of%20Ethiopia!5e0!3m2!1sen!2set!4v1646802540558!5m2!1sen!2set"
-                            height="400" style="border:0;" allowfullscreen=""></iframe>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form action="#" class="comment-form contact-form">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <input type="text" placeholder="Name">
+                            </div>
+                            <div class="col-lg-4">
+                                <input type="text" placeholder="Email">
+                            </div>
+                            <div class="col-lg-4">
+                                <input type="text" placeholder="Phone">
+                            </div>
+                            <div class="col-lg-12 text-center">
+                                <textarea placeholder="Messages"></textarea>
+                                <button type="submit" class="site-btn">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Contact Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
