--- a/schedule.html
+++ b/schedule.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Manup, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HECA | 2024</title>
+    <title>DISTEX | 2024</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap"
@@ -56,7 +56,7 @@
                         <li><a href="#">Exhibitor</a></li>
                         <li><a href="#">Sponsors</a></li>
                         <li><a href="./about-us.html">About</a></li>
-                        <li><a href="./contact.html">Contacts</a></li>
+                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
                     </ul>
                 </nav>
                 <!-- <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a> -->
@@ -659,7 +659,7 @@
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info@heca.com
+                                info@DISTEX.com
                             </li>
                         </ul>
                         <div class="ct-links">
