--- a/about-us.html
+++ b/about-us.html
@@ -44,14 +44,7 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         
-                        <li><a href="./speaker.html">Speakers</a>
-                            <ul class="dropdown">
-                                <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
-                                <li><a href="./speaker.html">Dr. Belete Molla</a></li>
-                                <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
-                                <li><a href="./speaker.html">Solomon Kassa</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="./speaker.html">Speakers</a></li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
                         
