--- a/blog.html
+++ b/blog.html
@@ -45,14 +45,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="#">Sponsors</a></li>
                         <li><a href="./about-us.html">About</a></li>
-                        <li><a href="./speaker.html">Speakers</a>
-                            <ul class="dropdown">
-                                <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
-                                <li><a href="./speaker.html">Dr. Belete Molla</a></li>
-                                <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
-                                <li><a href="./speaker.html">Solomon Kassa</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="./speaker.html">Speakers</a></li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
                         <!-- <li class="active"><a href="./blog.html">Blog</a></li> -->
                         <!-- <li><a href="./contact.html">Contacts</a></li> -->
