--- a/schedule.html
+++ b/schedule.html
@@ -43,14 +43,7 @@
                 <nav class="mainmenu mobile-menu">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="./speaker.html">Speakers</a>
-                            <ul class="dropdown">
-                                <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
-                                <li><a href="./speaker.html">Dr. Belete Molla</a></li>
-                                <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
-                                <li><a href="./speaker.html">Solomon Kassa</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="./speaker.html">Speakers</a></li>
                         <li class="active"><a href="./schedule.html">Agenda</a></li>
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
                         <li><a href="#">Exhibitor</a></li>
