Update menu items

--- a/speaker.html
+++ b/speaker.html
@@ -32,34 +32,29 @@
     </div>
 
     <!-- Header Section Begin -->
-    <header class="header-section header-normal">
+    <header class="header-section fixed-top">
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
                     <img src="img/logo.png" alt="">
+                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">DISTEX</h3> -->
                 </a>
             </div>
             <div class="nav-menu">
-                <nav class="mainmenu mobile-menu">
+                <nav class="mainmenu">
                     <ul>
-                        <li><a href="./index.html">Home</a></li>
-
-                        <li class="active"><a href="./speaker.html">Speakers</a>
-                            <ul class="dropdown">
-                                <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
-                                <li><a href="./speaker.html">Dr. Belete Molla</a></li>
-                                <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
-                                <li><a href="./speaker.html">Solomon Kassa</a></li>
+                        <li><p class="primary">Register Interest</p></li>
+                        <li><p class="primary-btn">Exhibit 2024</p></li>
+                        <li><a href="">Menu ▼ </a>
+                            <ul class="dropdown mobile-menu">
+                                <li><a href="./index.html">Home</a></li>
+                                <li class="active"><a href="./speaker.html">Speakers</a></li>
+                                <li><a href="./schedule.html">Agenda</a></li>
+                                <li><a href="#">Exhibitor</a></li>
+                                <li><a href="#">Sponsors</a></li>
+                                <li><a href="./about-us.html">About</a></li>
                             </ul>
                         </li>
-                        <!-- <li><a href="./schedule.html">Schedule</a></li> -->
-                        <!-- <li><a href="./blog.html">Blog</a></li> -->
-                        
-                        <li><a href="./schedule.html">Agenda</a></li>
-                        <li><a href="#">Exhibitor</a></li>
-                        <li><a href="#">Sponsors</a></li>
-                        <li><a href="./about-us.html">About</a></li>
-                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
                     </ul>
                 </nav>
                 <!-- <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a> -->
