--- a/index.html
+++ b/index.html
@@ -43,13 +43,18 @@
             <div class="nav-menu">
                 <nav class="mainmenu">
                     <ul>
-                        <li class="active"><a href="./index.html">Home</a></li>
-                        <li><a href="./speaker.html">Speakers</a></li>
-                        <li><a href="./schedule.html">Agenda</a></li>
-                        <li><a href="#">Exhibitor</a></li>
-                        <li><a href="#">Sponsors</a></li>
-                        <li><a href="./about-us.html">About</a></li>
-                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
+                        <li><p class="primary">Register Interest</p></li>
+                        <li><p class="primary-btn">Exhibit 2024</p></li>
+                        <li><a href="">Menu ▼ </a>
+                            <ul class="dropdown mobile-menu">
+                                <li class="active"><a href="./index.html">Home</a></li>
+                                <li><a href="./speaker.html">Speakers</a></li>
+                                <li><a href="./schedule.html">Agenda</a></li>
+                                <li><a href="#">Exhibitor</a></li>
+                                <li><a href="#">Sponsors</a></li>
+                                <li><a href="./about-us.html">About</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
                 <!-- <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a> -->
