--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info@DISTEX.com
+                                info@distex.com
                             </li>
                         </ul>
                         <div class="ct-links">
