--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                                         </li>
                                         <li>
                                             <span>Email:</span>
-                                            info@DISTEX.com
+                                            info@distex.com
                                         </li>
                                     </ul>
                                     <div class="ct-links">
