--- a/index copy.html
+++ b/index copy.html
@@ -627,7 +627,7 @@
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info@DISTEX.com
+                                info@distex.com
                             </li>
                         </ul>
                         <div class="ct-links">
