--- a/pricing.html
+++ b/pricing.html
@@ -154,7 +154,7 @@
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info@DISTEX.com
+                                info@distex.com
                             </li>
                         </ul>
                         <div class="ct-links">
