--- a/speaker.html
+++ b/speaker.html
@@ -240,7 +240,7 @@
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info@DISTEX.com
+                                info@distex.com
                             </li>
                         </ul>
                         <div class="ct-links">
