--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <ul>
                         <li><p class="primary">Register Interest</p></li>
                         <li><p class="primary-btn">Exhibit 2024</p></li>
-                        <li><a href="">Menu ▼ </a>
+                        <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li class="active"><a href="./index.html">Home</a></li>
                                 <li><a href="./speaker.html">Speakers</a></li>
@@ -139,9 +139,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="ha-pic">
-                        <img src="img/h-about.jpg" alt="">
-                    </div>
+                    <!-- <div class="ha-pic"> -->
+                        <img src="img/team-member/member.png" alt="">
+                    <!-- </div> -->
                 </div>
                 <div class="col-lg-6">
                     <div class="ha-text">
@@ -177,7 +177,7 @@
                 </div>
             </div>
         </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-1.jpg">
+        <div class="member-item set-bg" data-setbg="img/team-member/member.png">
             <div class="mi-social">
                 <div class="mi-social-inner bg-gradient">
                     <a href="#"><i class="fa fa-facebook"></i></a>
@@ -191,7 +191,7 @@
                 <span>EFDRE PM</span>
             </div>
         </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-3.jpg">
+        <div class="member-item set-bg" data-setbg="img/team-member/member.png">
             <div class="mi-social">
                 <div class="mi-social-inner bg-gradient">
                     <a href="#"><i class="fa fa-facebook"></i></a>
@@ -205,7 +205,7 @@
                 <span>Speaker</span>
             </div>
         </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-5.jpg">
+        <div class="member-item set-bg" data-setbg="img/team-member/member.png">
             <div class="mi-social">
                 <div class="mi-social-inner bg-gradient">
                     <a href="#"><i class="fa fa-facebook"></i></a>
@@ -678,17 +678,17 @@
                 </a>
                 <a href="#" class="pl-table">
                     <div class="pl-tablecell">
+                        <img src="img/partner-logo/logo-4.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
                         <img src="img/partner-logo/logo-2.png" alt="">
                     </div>
                 </a>
                 <a href="#" class="pl-table">
                     <div class="pl-tablecell">
                         <img src="img/partner-logo/logo-3.png" alt="">
-                    </div>
-                </a>
-                <a href="#" class="pl-table">
-                    <div class="pl-tablecell">
-                        <img src="img/partner-logo/logo-4.png" alt="">
                     </div>
                 </a>
                 <a href="#" class="pl-table">
@@ -753,7 +753,7 @@
             autoplay: {
                 delay: 3500, // Adjust the delay as needed (in milliseconds)
             },
-            speed: 1000, // Adjust the speed of transition (in milliseconds)
+            speed: 1500, // Adjust the speed of transition (in milliseconds)
         });
     </script>
 
