--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                     <ul>
                         <li><p class="primary">Register Interest</p></li>
                         <li><p class="primary-btn">Exhibit 2024</p></li>
-                        <li><a href="">Menu ▼ </a>
+                        <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li ><a href="./index.html">Home</a></li>
                                 <li><a href="./speaker.html">Speakers</a></li>
@@ -166,17 +166,17 @@
                 </a>
                 <a href="#" class="pl-table">
                     <div class="pl-tablecell">
+                        <img src="img/partner-logo/logo-4.png" alt="">
+                    </div>
+                </a>
+                <a href="#" class="pl-table">
+                    <div class="pl-tablecell">
                         <img src="img/partner-logo/logo-2.png" alt="">
                     </div>
                 </a>
                 <a href="#" class="pl-table">
                     <div class="pl-tablecell">
                         <img src="img/partner-logo/logo-3.png" alt="">
-                    </div>
-                </a>
-                <a href="#" class="pl-table">
-                    <div class="pl-tablecell">
-                        <img src="img/partner-logo/logo-4.png" alt="">
                     </div>
                 </a>
                 <a href="#" class="pl-table">
@@ -200,9 +200,14 @@
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul> -->
-                        <div class="copyright-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="https://techethio.com" target="_blank">TechEthio</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+                        <div class="copyright-text">
+                            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                Copyright &copy;
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved | <a
+                                    href="https://techethio.com" target="_blank">TechEthio</a>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
+                        </div>
                         <div class="ft-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
