--- a/speaker.html
+++ b/speaker.html
@@ -45,7 +45,7 @@
                     <ul>
                         <li><p class="primary">Register Interest</p></li>
                         <li><p class="primary-btn">Exhibit 2024</p></li>
-                        <li><a href="">Menu ▼ </a>
+                        <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
                                 <li class="active"><a href="./speaker.html">Speakers</a></li>
@@ -91,7 +91,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="si-pic">
-                                    <img src="img/speakers/speaker-1.jpg" alt="">
+                                    <img src="img/speakers/speaker.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -118,7 +118,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="si-pic">
-                                    <img src="img/speakers/speaker-2.jpg" alt="">
+                                    <img src="img/speakers/speaker.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -145,7 +145,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="si-pic">
-                                    <img src="img/team-member/member-5.jpg" alt="">
+                                    <img src="img/team-member/member.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -172,7 +172,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="si-pic">
-                                    <img src="img/speakers/speaker-3.jpg" alt="">
+                                    <img src="img/speakers/speaker.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
