--- a/index.html
+++ b/index.html
@@ -94,6 +94,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="swiper-slide set-bg" data-setbg="img/contact-content-bg.jpg">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-9">
+                                <div class="hero-text">
+                                    <h2>Independently rated as the best tech event in the world. Elevating Ethiopia Digitally</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
     </section>
 
