--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             <div class="nav-menu">
                 <nav class="mainmenu">
                     <ul>
-                        <li><p class="primary">Register Interest</p></li>
-                        <li><p class="primary-btn">Exhibit 2024</p></li>
+                        <a href="./register-interst.html"><li><p class="primary">Register Interest</p></li></a>
+                        <a href="./exhibitor.html"><li><p class="primary-btn">Exhibit 2024</p></li></a>
+
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li class="active"><a href="./index.html">Home</a></li>
