--- a/register-interst.html
+++ b/register-interst.html
@@ -90,7 +90,7 @@
                 <h1></h1>
               </div>
               <div class="form-header">
-                <h1 class="">Exhibitor</h1>
+                <h1 class="">Register</h1>
               </div>
               <form id="myForm">
                 <div class="row">
