--- a/register-interst.html
+++ b/register-interst.html
@@ -41,9 +41,9 @@
   </head>
 
   <body>
-    <!-- <div id="preloder">
+    <div id="preloder">
       <div class="loader"></div>
-    </div> -->
+    </div>
 
     <header class="header-section fixed-top">
       <div class="container">
@@ -337,3 +337,11 @@
     }
   });
 </script>
+
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/jquery.countdown.min.js"></script>
+<script src="js/jquery.slicknav.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
