--- a/register-interst.html
+++ b/register-interst.html
@@ -187,6 +187,17 @@
                   ></div>
                 </div>
 
+                <div class="form-group">
+                  <span class="form-label">Upload File</span>
+                  <input
+                    id="fileInput"
+                    class="form-control"
+                    type="file"
+                    accept=".pdf,.doc,.docx"
+                    placeholder="Upload your file"
+                  />
+                </div>
+
                 <div class="form-btn">
                   <button type="submit" class="submit-btn">Register Now</button>
                 </div>
