--- a/speaker.html
+++ b/speaker.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Manup, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DISTEX | 2024</title>
+    <title>Stride Ethiopia | 2024</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap"
@@ -37,7 +37,7 @@
             <div class="logo">
                 <a href="./index.html">
                     <img src="img/logo.png" alt="">
-                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">DISTEX</h3> -->
+                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">Stride Ethiopia</h3> -->
                 </a>
             </div>
             <div class="nav-menu">
@@ -240,7 +240,7 @@
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info@distex.com
+                                info@Stride Ethiopia.com
                             </li>
                         </ul>
                         <div class="ct-links">
