--- a/index copy.html
+++ b/index copy.html
@@ -127,17 +127,20 @@
                 <div class="col-lg-6">
                     <div class="ha-text">
                         <h2>About Conference</h2>
-                        <p>When I first got into the online advertising business, I was looking for the magical
-                            combination that would put my website into the top search engine rankings, catapult me to
-                            the forefront of the minds or individuals looking to buy my product, and generally make me
-                            rich beyond my wildest dreams! After succeeding in the business for this long, I’m able to
-                            look back on my old self with this kind of thinking and shake my head.</p>
-                        <ul>
+                        <p>STRIDE Ethiopia is a pioneering annual event aimed at fostering collaboration and innovation
+                            in Science, Technology, Innovation (STI), and Digitalization. With a focus on national and
+                            international policy discussions, the event serves as a platform for government, private
+                            sector, academia, and development partners to converge and shape the digital economy
+                            landscape. Through exhibitions, forums, and networking opportunities, STRIDE Ethiopia
+                            facilitates engagement between stakeholders, promotes digital government services, supports
+                            startups, and showcases disruptive technologies. Join us in advancing Ethiopia's journey
+                            towards a vibrant and sustainable digital future</p>
+                        <!-- <ul>
                             <li><span class="icon_check"></span> Write On Your Business Card</li>
                             <li><span class="icon_check"></span> Advertising Outdoors</li>
                             <li><span class="icon_check"></span> Effective Advertising Pointers</li>
                             <li><span class="icon_check"></span> Kook 2 Directory Add Url Free</li>
-                        </ul>
+                        </ul> -->
                         <a href="#" class="ha-btn">Discover Now</a>
                     </div>
                 </div>
@@ -263,7 +266,7 @@
                                                 <div class="sc-text">
                                                     <h4>AI in Healthcare: Transforming Patient Care</h4>
                                                     <ul>
-                                                        <li><i class="fa fa-user"></i>  Solomon Kassa</li>
+                                                        <li><i class="fa fa-user"></i> Solomon Kassa</li>
 
                                                     </ul>
                                                 </div>
@@ -271,7 +274,8 @@
                                             <div class="col-lg-4">
                                                 <ul class="sc-widget">
                                                     <li><i class="fa fa-clock-o"></i> 08:00 AM - 10:00 AM</li>
-                                                    <li><i class="fa fa-map-marker"></i> science museum Addis Ababa, Ethiopia
+                                                    <li><i class="fa fa-map-marker"></i> science museum Addis Ababa,
+                                                        Ethiopia
                                                     </li>
                                                 </ul>
                                             </div>
