--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
             <div class="nav-menu">
                 <nav class="mainmenu">
                     <ul>
-                        <li><p class="primary">Register Interest</p></li>
-                        <li><p class="primary-btn">Exhibit 2024</p></li>
+                        <li>
+                            <p class="primary">Register Interest</p>
+                        </li>
+                        <li>
+                            <p class="primary-btn">Exhibit 2024</p>
+                        </li>
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li class="active"><a href="./index.html">Home</a></li>
@@ -99,7 +103,8 @@
                         <div class="row">
                             <div class="col-lg-9">
                                 <div class="hero-text">
-                                    <h2>Independently rated as the best tech event in the world. Elevating Ethiopia Digitally</h2>
+                                    <h2>Independently rated as the best tech event in the world. Elevating Ethiopia
+                                        Digitally</h2>
                                 </div>
                             </div>
                         </div>
@@ -151,23 +156,26 @@
             <div class="row">
                 <div class="col-lg-6">
                     <!-- <div class="ha-pic"> -->
-                        <img src="img/team-member/member.png" alt="">
+                    <img src="img/team-member/member.png" alt="">
                     <!-- </div> -->
                 </div>
                 <div class="col-lg-6">
                     <div class="ha-text">
                         <h2>About Conference</h2>
-                        <p>When I first got into the online advertising business, I was looking for the magical
-                            combination that would put my website into the top search engine rankings, catapult me to
-                            the forefront of the minds or individuals looking to buy my product, and generally make me
-                            rich beyond my wildest dreams! After succeeding in the business for this long, I’m able to
-                            look back on my old self with this kind of thinking and shake my head.</p>
-                        <ul>
+                        <p>STRIDE Ethiopia is a pioneering annual event aimed at fostering collaboration and innovation
+                            in Science, Technology, Innovation (STI), and Digitalization. With a focus on national and
+                            international policy discussions, the event serves as a platform for government, private
+                            sector, academia, and development partners to converge and shape the digital economy
+                            landscape. Through exhibitions, forums, and networking opportunities, STRIDE Ethiopia
+                            facilitates engagement between stakeholders, promotes digital government services, supports
+                            startups, and showcases disruptive technologies. Join us in advancing Ethiopia's journey
+                            towards a vibrant and sustainable digital future</p>
+                        <!-- <ul>
                             <li><span class="icon_check"></span> Write On Your Business Card</li>
                             <li><span class="icon_check"></span> Advertising Outdoors</li>
                             <li><span class="icon_check"></span> Effective Advertising Pointers</li>
                             <li><span class="icon_check"></span> Kook 2 Directory Add Url Free</li>
-                        </ul>
+                        </ul> -->
                         <a href="#" class="ha-btn">Discover Now</a>
                     </div>
                 </div>
