Update start date

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col-lg-8">
                     <div class="cd-timer" id="countdown">
                         <div class="cd-item">
-                            <span>32</span>
+                            <span>18/span>
                             <p>Days</p>
                         </div>
                         <div class="cd-item">
