update count date

--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
                 <div class="col-lg-8">
                     <div class="cd-timer" id="countdown">
                         <div class="cd-item">
-                            <span>18</span>
+                            <span>17</span>
                             <p>Days</p>
                         </div>
                         <div class="cd-item">
-                            <span>01</span>
+                            <span>02</span>
                             <p>Hours</p>
                         </div>
                         <div class="cd-item">
-                            <span>25</span>
+                            <span>23</span>
                             <p>Minutes</p>
                         </div>
                         <div class="cd-item">
-                            <span>39</span>
+                            <span>52</span>
                             <p>Seconds</p>
                         </div>
                     </div>
@@ -259,31 +259,55 @@
                             <li class="nav-item">
                                 <a class="nav-link active" data-toggle="tab" href="#tabs-1" role="tab">
                                     <h5>Day 1</h5>
-                                    <p>May 04, 2024</p>
+                                    <p>May 18, 2024</p>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab">
                                     <h5>Day 2</h5>
-                                    <p>May 05, 2024</p>
+                                    <p>May 19, 2024</p>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab">
                                     <h5>Day 3</h5>
-                                    <p>May 06, 2024</p>
+                                    <p>May 20, 2024</p>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-4" role="tab">
                                     <h5>Day 4</h5>
-                                    <p>May 07, 2024</p>
+                                    <p>May 21, 2024</p>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-5" role="tab">
                                     <h5>Day 5</h5>
-                                    <p>May 08, 2024</p>
+                                    <p>May 22, 2024</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-6" role="tab">
+                                    <h5>Day 6</h5>
+                                    <p>May 23, 2024</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-7" role="tab">
+                                    <h5>Day 7</h5>
+                                    <p>May 24, 2024</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-8" role="tab">
+                                    <h5>Day 8</h5>
+                                    <p>May 25, 2024</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-9" role="tab">
+                                    <h5>Day 9</h5>
+                                    <p>May 26, 2024</p>
                                 </a>
                             </li>
                         </ul><!-- Tab panes -->
