Landing page update

--- a/index copy.html
+++ b/index copy.html
@@ -36,8 +36,8 @@
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="img/logo.png" alt="">
-                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">Stride Ethiopia</h3> -->
+                    <!-- <img src="img/logo.png" alt=""> -->
+                    <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3>
                 </a>
             </div>
             <div class="nav-menu">
@@ -47,7 +47,8 @@
                         <li></li>
                         <li class="active"><a href="./index.html">Home</a>
                             <ul class="dropdown mobile-menu">
-                                <li><a href="./speaker.html">Speakers</a></li>
+                                
+                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
                                 <li><a href="./schedule.html">Agenda</a></li>
                                 <li><a href="#">Exhibitor</a></li>
                                 <li><a href="#">Sponsors</a></li>
@@ -70,8 +71,8 @@
             <div class="row">
                 <div class="col-lg-9">
                     <div class="hero-text">
-                        <span>12 to 19 may 2024, Addis Ababa, Ethiopia</span>
-                        <h2>Elevating Ethiopia Digitally</h2>
+                        <span>18 to 29 may 2024, Addis Ababa, Ethiopia</span>
+                        <h2>Science Unlocks, Technology Connects, innovation Drives</h2>
                         <a href="./exhibitor.html" target="_blank" class="primary-btn">Register Now</a>
                     </div>
                 </div>
