--- a/schedule.html
+++ b/schedule.html
@@ -36,8 +36,8 @@
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="img/logo.png" alt="">
-                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">Stride Ethiopia</h3> -->
+                    <!-- <img src="img/logo.png" alt=""> -->
+                    <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3>
                 </a>
             </div>
             <div class="nav-menu">
@@ -48,7 +48,8 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./speaker.html">Speakers</a></li>
+                                
+                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
                                 <li class="active"><a href="./schedule.html">Agenda</a></li>
                                 <li><a href="#">Exhibitor</a></li>
                                 <li><a href="#">Sponsors</a></li>
@@ -114,19 +115,51 @@
                                                 <th></th>
                                                 <th>
                                                     <strong>Day 1</strong>
-                                                    <span>May 09, 2024</span>
+                                                    <span>May 18, 2024</span>
                                                 </th>
                                                 <th>
                                                     <strong>Day 2</strong>
-                                                    <span>May 11, 2024</span>
+                                                    <span>May 19, 2024</span>
                                                 </th>
                                                 <th>
                                                     <strong>Day 3</strong>
-                                                    <span>May 12, 2024</span>
+                                                    <span>May 20, 2024</span>
                                                 </th>
                                                 <th>
                                                     <strong>Day 4</strong>
-                                                    <span>May 14, 2024</span>
+                                                    <span>May 21, 2024</span>
+                                                </th>
+                                                <th>
+                                                    <strong>Day 5</strong>
+                                                    <span>May 22, 2024</span>
+                                                </th>
+                                                <th>
+                                                    <strong>Day 6</strong>
+                                                    <span>May 23, 2024</span>
+                                                </th>
+                                                <th>
+                                                    <strong>Day 7</strong>
+                                                    <span>May 24, 2024</span>
+                                                </th>
+                                                <th>
+                                                    <strong>Day 8</strong>
+                                                    <span>May 25, 2024</span>
+                                                </th>
+                                                <th>
+                                                    <strong>Day 9</strong>
+                                                    <span>May 26, 2024</span>
+                                                </th>
+                                                <th>
+                                                    <strong>Day 4</strong>
+                                                    <span>May 27, 2024</span>
+                                                </th>
+                                                <th>
+                                                    <strong>Day 4</strong>
+                                                    <span>May 28, 2024</span>
+                                                </th>
+                                                <th>
+                                                    <strong>Day 4</strong>
+                                                    <span>May 29, 2024</span>
                                                 </th>
                                             </tr>
                                         </thead>
