--- a/about-us.html
+++ b/about-us.html
@@ -36,19 +36,24 @@
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="img/logo.png" alt="">
-                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">Stride Ethiopia</h3> -->
+                    <!-- <img src="img/logo.png" alt=""> -->
+                    <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3>
                 </a>
             </div>
             <div class="nav-menu">
                 <nav class="mainmenu">
                     <ul>
-                        <li><p class="primary">Register Interest</p></li>
-                        <li><p class="primary-btn">Exhibit 2024</p></li>
+                        <li>
+                            <p class="primary">Register Interest</p>
+                        </li>
+                        <li>
+                            <p class="primary-btn">Exhibit 2024</p>
+                        </li>
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
-                                <li ><a href="./index.html">Home</a></li>
-                                <li><a href="./speaker.html">Speakers</a></li>
+                                <li><a href="./index.html">Home</a></li>
+
+                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
                                 <li><a href="./schedule.html">Agenda</a></li>
                                 <li><a href="#">Exhibitor</a></li>
                                 <li><a href="#">Sponsors</a></li>
@@ -88,23 +93,23 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>Something About Us</h2>
-                        <p class="f-para">There are several ways people can make money online. From selling products to
-                            advertising. In this article I am going to explain the concept of contextual advertising.
+                        <p class="f-para" style="text-align: justify;">STRIDE Ethiopia, initiated by the Ministry of Innovation of Ethiopia, is a
+                            pioneering annual event aimed at fostering collaboration and innovation in Science,
+                            Technology, Research, Innovation, Digitalization, and Entrepreneurship (STRIDE). It serves
+                            as both a conference and an expo, bringing together stakeholders from startups, ecosystem
+                            builders, corporations, government offices, academia, and development partners. With a focus
+                            on national and international policy discussions, the event provides a platform to shape
+                            Ethiopia's digital economy landscape. Through exhibitions, forums, and networking
+                            opportunities, STRIDE Ethiopia facilitates engagement, promotes digital government services,
+                            supports startups, and showcases disruptive technologies.
                         </p>
-                        <p>First I will explain what contextual advertising is. Contextual advertising means the
-                            advertising of products on a website according to the content the page is displaying. For
-                            example if the content of a website was information on a Ford truck then the advertisements
-                            would be for Ford trucks for sale, or Ford servicing etc. It picks up the words on the page
-                            and displays ads that are similar to those words. Then when someone either performs an
-                            action or clicks on your page you will get paid.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6">
                     <!-- <div class="about-pic"> -->
-                        <img src="img/team-member/member.png" alt="">
+                    <img src="img/team-member/member.png" alt="">
                     <!-- </div> -->
                 </div>
                 <div class="col-lg-6">
@@ -129,7 +134,7 @@
     <!-- About Section End -->
 
     <!-- Story Section Begin -->
-    <section class="story-section spad">
+    <!-- <section class="story-section spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -184,7 +189,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Story Section End -->
 
     <section class="contact-from-section spad">
