--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,8 @@
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="img/logo.png" alt="">
+                    <!-- <img src="img/logo.png" alt=""> -->
+                    <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3>
                 </a>
             </div>
             <div class="nav-menu">
@@ -45,7 +46,8 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="#">Sponsors</a></li>
                         <li><a href="./about-us.html">About</a></li>
-                        <li><a href="./speaker.html">Speakers</a></li>
+                        
+                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
                         <!-- <li class="active"><a href="./blog.html">Blog</a></li> -->
                         <!-- <li><a href="./contact.html">Contacts</a></li> -->
