--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="img/logo.png" alt="">
-                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">Stride Ethiopia</h3> -->
+                    <!-- <img src="img/logo.png" alt=""> -->
+                    <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3>
                 </a>
             </div>
             <div class="nav-menu">
@@ -48,7 +48,8 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li ><a href="./index.html">Home</a></li>
-                                <li><a href="./speaker.html">Speakers</a></li>
+                                
+                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
                                 <li><a href="./schedule.html">Agenda</a></li>
                                 <li><a href="#">Exhibitor</a></li>
                                 <li><a href="#">Sponsors</a></li>
