--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="img/logo.png" alt="">
-                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">Stride Ethiopia</h3> -->
+                    <!-- <img src="img/logo.png" alt=""> -->
+                    <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3>
                 </a>
             </div>
             <div class="nav-menu">
@@ -52,7 +52,7 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li class="active"><a href="./index.html">Home</a></li>
-                                <li><a href="./speaker.html">Speakers</a></li>
+                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
                                 <li><a href="./schedule.html">Agenda</a></li>
                                 <li><a href="#">Exhibitor</a></li>
                                 <li><a href="#">Sponsors</a></li>
@@ -77,8 +77,8 @@
                         <div class="row">
                             <div class="col-lg-9">
                                 <div class="hero-text">
-                                    <span>12 to 19 May 2024, Addis Ababa, Ethiopia</span>
-                                    <h2>Elevating Ethiopia Digitally</h2>
+                                    <span>18 to 26 May 2024, Addis Ababa, Ethiopia</span>
+                                    <h2>Science Unlocks, Technology Connects, innovation Drives</h2>
                                     <a href="./exhibitor.html" target="_blank" class="primary-btn">Register Now</a>
                                 </div>
                             </div>
@@ -90,9 +90,8 @@
                         <div class="row">
                             <div class="col-lg-9">
                                 <div class="hero-text">
-                                    <h2>The biggest tech & startup show on the planet
-                                        Stride Ethiopia GLOBAL 2024
-                                        Independently rated as the best tech event in the world</h2>
+                                    <h2>Stride Ethiopia Expo 2024, a highly anticipated science and technology event in
+                                        Ethiopia</h2>
                                 </div>
                             </div>
                         </div>
@@ -103,8 +102,7 @@
                         <div class="row">
                             <div class="col-lg-9">
                                 <div class="hero-text">
-                                    <h2>Independently rated as the best tech event in the world. Elevating Ethiopia
-                                        Digitally</h2>
+                                    <h2>Get ready for an inspiring showcase of cutting-edge ideas, transformative technologies, and impactful collaborations</h2>
                                 </div>
                             </div>
                         </div>
@@ -162,21 +160,26 @@
                 <div class="col-lg-6">
                     <div class="ha-text">
                         <h2>About Conference</h2>
-                        <p>STRIDE Ethiopia is a pioneering annual event aimed at fostering collaboration and innovation
-                            in Science, Technology, Innovation (STI), and Digitalization. With a focus on national and
-                            international policy discussions, the event serves as a platform for government, private
-                            sector, academia, and development partners to converge and shape the digital economy
-                            landscape. Through exhibitions, forums, and networking opportunities, STRIDE Ethiopia
-                            facilitates engagement between stakeholders, promotes digital government services, supports
-                            startups, and showcases disruptive technologies. Join us in advancing Ethiopia's journey
-                            towards a vibrant and sustainable digital future</p>
+                        <p style="text-align: justify;">STRIDE Ethiopia, initiated by the Ministry of Innovation of Ethiopia, is a pioneering annual
+                            event aimed at fostering collaboration and innovation in Science, Technology, Research,
+                            Innovation, Digitalization, and Entrepreneurship (STRIDE). It serves as both a conference
+                            and an expo, bringing together stakeholders from startups, ecosystem builders, corporations,
+                            government offices, academia, and development partners. With a focus on national and
+                            international policy discussions, the event provides a platform to shape Ethiopia's digital
+                            economy landscape. Through exhibitions, forums, and networking opportunities, STRIDE
+                            Ethiopia facilitates engagement, promotes digital government services, supports startups,
+                            and showcases disruptive technologies.
+                            <br /><br />
+                            Join us in advancing Ethiopia's journey towards a vibrant and sustainable digital future.
+                            STRIDE Ethiopia Expo 2024, May 18 - 26, 2024
+                        </p>
                         <!-- <ul>
                             <li><span class="icon_check"></span> Write On Your Business Card</li>
                             <li><span class="icon_check"></span> Advertising Outdoors</li>
                             <li><span class="icon_check"></span> Effective Advertising Pointers</li>
                             <li><span class="icon_check"></span> Kook 2 Directory Add Url Free</li>
                         </ul> -->
-                        <a href="#" class="ha-btn">Discover Now</a>
+                        <!-- <a href="#" class="ha-btn">Discover Now</a> -->
                     </div>
                 </div>
             </div>
@@ -185,7 +188,7 @@
     <!-- Home About Section End -->
 
     <!-- Team Member Section Begin -->
-    <section class="team-member-section">
+    <!-- <section class="team-member-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -238,7 +241,7 @@
                 <span>Founder of BlueMoon Ethiopia</span>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Team Member Section End -->
 
     <!-- Schedule Section Begin -->
