--- a/main-header.html
+++ b/main-header.html
@@ -46,7 +46,8 @@
                         <li><a href="#">Sponsors</a></li>
                         <li><a href="./about-us.html">About</a></li>
                         
-                        <li><a href="./speaker.html">Speakers</a></li>
+                        
+                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
                         <!-- <li><a href="./contact.html">Contacts</a></li> -->
